// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`description Create the snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategory={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`description should get categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategory={[Function]}
  />
  <hr />
  <ol>
    <GridGif
      category="One Punch"
      key="0"
    />
    <GridGif
      category="Chavo"
      key="1"
    />
  </ol>
</Fragment>
`;
